--- a/scripts/ppconfig.json
+++ b/scripts/ppconfig.json
@@ -1,167 +1,1 @@
-{
-    "name": "",
-    "url": "",
-    "showName": "",
-    "appid": "",
-    "icon": "",
-    "iconRound": true,
-    "state": true,
-    "single": true,
-    "injectJq": true,
-    "tauriApi": false,
-    "devbug": false,
-    "version": "0.0.1",
-    "platform": "desktop",
-    "width": 800,
-    "height": 600,
-    "desc": "",
-    "jsFile": [],
-    "filterCss": "",
-    "customJs": "",
-    "isHtml": false,
-    "htmlPath": "",
-    "htmlFiles": [],
-    "more": {
-        "windows": {
-            "label": "",
-            "title": "",
-            "url": "",
-            "userAgent": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/130.0.0.0 Safari/537.36",
-            "width": 800,
-            "height": 600,
-            "theme": null,
-            "resizable": true,
-            "fullscreen": false,
-            "maximized": false,
-            "minWidth": 400,
-            "minHeight": 300,
-            "maxWidth": 1920,
-            "maxHeight": 1080,
-            "decorations": true,
-            "transparent": false,
-            "titleBarStyle": "Visible",
-            "visible": true,
-            "focus": true,
-            "closable": true,
-            "minimizable": true,
-            "maximizable": true,
-            "alwaysOnTop": false,
-            "alwaysOnBottom": false,
-            "center": false,
-            "skipTaskbar": false,
-            "tabbingIdentifier": null,
-            "parent": null,
-            "dragDropEnabled": true,
-            "browserExtensionsEnabled": false,
-            "devtools": true,
-            "contentProtected": false,
-            "hiddenTitle": false,
-            "incognito": false,
-            "proxyUrl": null,
-            "useHttpsScheme": false,
-            "zoomHotkeysEnabled": false,
-            "acceptFirstMouse": false,
-            "create": false
-        }
-    },
-    "phone": {
-        "safeArea": {
-            "top": 0,
-            "bottom": 0,
-            "left": 0,
-            "right": 0
-        },
-        "header": {
-            "show": false,
-            "title": "",
-            "backgroundColor": "",
-            "color": "",
-            "fontSize": 16,
-            "fontWeight": "bold",
-            "loading": false,
-            "toolBar": false,
-            "toolBarBackgroundColor": "",
-            "toolBarColor": "",
-            "toolBarFontSize": 16,
-            "toolBarFontWeight": "bold"
-        },
-        "siderMenu": {
-            "show": false,
-            "width": 0,
-            "backgroundColor": "",
-            "color": "",
-            "fontSize": 16,
-            "fontWeight": "bold",
-            "title": "",
-            "titleColor": "",
-            "titleFontSize": 16,
-            "titleFontWeight": "bold"
-        },
-        "tabBar": {
-            "show": false,
-            "backgroundColor": "",
-            "color": "",
-            "activeColor": "",
-            "fontSize": 16,
-            "fontWeight": "bold",
-            "tabBarItem": []
-        },
-        "webview": {
-            "userAgent": "",
-            "javaScriptEnabled": true,
-            "domStorageEnabled": true,
-            "allowFileAccess": true,
-            "loadWithOverviewMode": true,
-            "setSupportZoom": true,
-            "clearCache": true
-        }
-    },
-    "ios": {
-        "name": "PakePlus",
-        "showName": "PakePlus",
-        "version": "0.0.1",
-        "webUrl": "https://juejin.cn/",
-        "id": "com.oaikes.app",
-        "icon": "./app-icon.png",
-        "desc": "PakePlus Project by 1024xiaoshen",
-        "pubBody": "PakePlus ios build body",
-        "isHtml": false,
-        "debug": false
-    },
-    "android": {
-        "name": "PakePlus",
-        "showName": "PakePlus",
-        "version": "0.0.1",
-        "webUrl": "https://juejin.cn/",
-        "id": "com.oaikes.pakeplus.android",
-        "icon": "./app-icon.png",
-        "input": "./app-icon.png",
-        "output": "./res",
-        "rounded": true,
-        "copyTo": "./app/src/main/res",
-        "androidResDir": "./app/src/main/res",
-        "desc": "PakePlus Project by 1024xiaoshen",
-        "pubBody": "PakePlus android build body",
-        "isHtml": false,
-        "debug": false
-    },
-    "desktop": {
-        "name": "PakePlus2",
-        "showName": "oaikes",
-        "version": "0.0.2",
-        "id": "com.oaikes.app",
-        "desc": "PakePlus Project by 1024xiaoshen",
-        "webUrl": "https://juejin.cn/",
-        "iconPath": "../app-icon.png",
-        "inputPath": "../app-icon.png",
-        "tempPath": "./processed-image.png",
-        "icnsPath": "../src-tauri/icons/icon.icns",
-        "pubBody": "PakePlus desktop build body",
-        "isHtml": false,
-        "single": true,
-        "state": true,
-        "injectJq": false,
-        "tauriApi": false,
-        "debug": false
-    }
-}
+{"name":"HAOT","url":"https://account.fuhaogou.com","showName":"优团门店","appid":"com.youtuan.app","icon":"","iconRound":true,"state":true,"single":true,"injectJq":true,"tauriApi":false,"devbug":false,"version":"1.0.1","preview":"Android","platform":["1-1"],"width":1080,"height":1920,"desc":"","jsFile":[],"filterCss":"","customJs":"console.log(\n    '%cbuild from PakePlus： 链接1',\n    'color:orangered;font-weight:bolder'\n)\n\n// 加载外部CSS文件\nfunction loadExternalCSS() {\n    const cssLink = document.createElement('link');\n    cssLink.rel = 'stylesheet';\n    cssLink.type = 'text/css';\n    cssLink.href = 'https://server.kexuny.cn/midd.css'; // 您的CSS文件路径\n    cssLink.crossOrigin = 'anonymous';\n    \n    cssLink.onload = () => {\n        console.log('外部CSS文件加载成功');\n    };\n    \n    cssLink.onerror = () => {\n        console.error('外部CSS文件加载失败');\n        // 可以在这里添加备用样式\n    };\n    \n    document.head.appendChild(cssLink);\n}\n\n// 引用外部隐藏元素的脚本\nfunction loadExternalHideScript() {\n    const script = document.createElement('script');\n    // 修正URL路径和协议\n    script.src = 'https://server.kexuny.cn/midd.js';\n    script.type = 'text/javascript';\n    script.crossOrigin = 'anonymous'; // 处理跨域\n    \n    // 加载成功回调\n    script.onload = () => {\n        console.log('外部隐藏元素脚本加载成功');\n        // 额外触发一次隐藏操作，确保最新DOM已加载\n        if (window.hidePakeElements) {\n            // 增加更长延迟，确保页面完全渲染\n            setTimeout(window.hidePakeElements, 2000);\n        }\n    };\n    \n    // 加载失败回调\n    script.onerror = () => {\n        console.error('外部隐藏元素脚本加载失败，将使用备用方案');\n        // 备用隐藏逻辑\n        const elementsToHide = [\n            '.es-login-style1-left',\n            '.other-title',\n            '.iconfont.icon-weixin2',\n            '.registered',\n            '.account-corner'\n        ];\n        \n        const hideElements = () => {\n            elementsToHide.forEach(selector => {\n                const element = document.querySelector(selector);\n                if (element) {\n                    element.style.display = 'none';\n                    console.log(`[备用方案] 已隐藏元素: ${selector}`);\n                }\n            });\n        };\n        \n        // 多重触发确保执行\n        hideElements();\n        setTimeout(hideElements, 1000);\n        setTimeout(hideElements, 2000);\n    };\n    \n    document.head.appendChild(script);\n}\n\n// 加载所有外部资源\nfunction loadExternalResources() {\n    loadExternalCSS(); // 先加载CSS\n    loadExternalHideScript(); // 然后加载脚本\n}\n\n// 确保在DOM准备好后加载资源\nif (document.readyState === 'complete') {\n    loadExternalResources();\n} else {\n    window.addEventListener('DOMContentLoaded', loadExternalResources);\n}\n\n// very important, if you don't know what it is, don't touch it\nconst hookClick = (e) => {\n    const origin = e.target.closest('a')\n    const isBaseTargetBlank = document.querySelector(\n        'head base[target=\"_blank\"]'\n    )\n    console.log('origin', origin, isBaseTargetBlank)\n    if (\n        (origin && origin.href && origin.target === '_blank') ||\n        (origin && origin.href && isBaseTargetBlank)\n    ) {\n        e.preventDefault()\n        console.log('handle origin', origin)\n        location.href = origin.href\n    } else {\n        console.log('not handle origin', origin)\n    }\n}\n\nwindow.open = function (url, target, features) {\n    console.log('open', url, target, features)\n    location.href = url\n}\n\ndocument.addEventListener('click', hookClick, { capture: true })","isHtml":false,"htmlPath":"","htmlFiles":[],"more":{"windows":{"label":"","title":"优团门店","url":"https://account.fuhaogou.com","userAgent":"Mozilla/5.0 (Linux; Android 14; Pixel 6) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/130.0.0.0 Mobile Safari/537.36","width":750,"height":1920,"theme":null,"resizable":true,"fullscreen":false,"maximized":false,"minWidth":400,"minHeight":300,"maxWidth":1920,"maxHeight":1080,"decorations":true,"transparent":false,"titleBarStyle":"Visible","visible":true,"focus":true,"closable":true,"minimizable":true,"maximizable":true,"alwaysOnTop":false,"alwaysOnBottom":false,"center":false,"skipTaskbar":false,"tabbingIdentifier":null,"parent":null,"dragDropEnabled":true,"browserExtensionsEnabled":false,"devtools":true,"contentProtected":false,"hiddenTitle":false,"incognito":false,"proxyUrl":null,"useHttpsScheme":false,"zoomHotkeysEnabled":false,"acceptFirstMouse":false,"create":false}},"phone":{"safeArea":{"top":0,"bottom":0,"left":0,"right":0},"header":{"show":false,"title":"","backgroundColor":"","color":"","fontSize":16,"fontWeight":"bold","loading":false,"toolBar":false,"toolBarBackgroundColor":"","toolBarColor":"","toolBarFontSize":16,"toolBarFontWeight":"bold"},"siderMenu":{"show":false,"width":0,"backgroundColor":"","color":"","fontSize":16,"fontWeight":"bold","title":"","titleColor":"","titleFontSize":16,"titleFontWeight":"bold"},"tabBar":{"show":false,"backgroundColor":"","color":"","activeColor":"","fontSize":16,"fontWeight":"bold","tabBarItem":[]},"webview":{"userAgent":"","javaScriptEnabled":true,"domStorageEnabled":true,"allowFileAccess":true,"loadWithOverviewMode":true,"setSupportZoom":true,"clearCache":true}},"ios":{"name":"HAOT","showName":"优团门店","version":"1.0.1","webUrl":"https://account.fuhaogou.com","id":"com.youtuan.app.ios","icon":"./app-icon.png","desc":"Package for personal use only, please do not use for commercial purposes（打包仅限个人使用，请勿传播或商业用途）","pubBody":"Package for personal use only, please do not use for commercial purposes（打包仅限个人使用，请勿传播或商业用途）","isHtml":false,"debug":false},"android":{"name":"HAOT","showName":"优团门店","version":"1.0.1","webUrl":"https://account.fuhaogou.com","id":"com.youtuan.app.android","icon":"./app-icon.png","input":"./app-icon.png","output":"./res","rounded":true,"copyTo":"./app/src/main/res","androidResDir":"./app/src/main/res","desc":"Package for personal use only, please do not use for commercial purposes（打包仅限个人使用，请勿传播或商业用途）","pubBody":"Package for personal use only, please do not use for commercial purposes（打包仅限个人使用，请勿传播或商业用途）","isHtml":false,"debug":false},"desktop":{"name":"HAOT","showName":"优团门店","version":"1.0.1","id":"com.youtuan.app.desktop","desc":"Package for personal use only, please do not use for commercial purposes（打包仅限个人使用，请勿传播或商业用途，否则后果自负）","webUrl":"https://account.fuhaogou.com","iconPath":"../app-icon.png","inputPath":"../app-icon.png","tempPath":"./processed-image.png","icnsPath":"../src-tauri/icons/icon.icns","pubBody":"Package for personal use only, please do not use for commercial purposes（打包仅限个人使用，请勿传播或商业用途，否则后果自负）","isHtml":false,"single":true,"state":true,"injectJq":false,"tauriApi":false,"buildMethod":"local","debug":false}}
